# flxor

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  shell.nix  workout.db
assets/: main.css
src/: main.rs
src/domains/: exercise.rs  mod.rs  workout.rs
src/frontend/: app.rs
src/repos/: database.rs  mod.rs  sqlite.rs
