[package]
name = "flexer"
version = "0.1.0"
authors = ["Hector <agenthector007@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dioxus = { version = "0.6.0", features = [ ] }
dioxus-logger = "0.6.2"
rusqlite = "0.37.0"
serde = "1.0.228"
thiserror = "2.0.17"
uuid =  { version = "1.18.1", features = ["v4"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
